2006-01-22 Tim
 PATCH: [ 1411102 ] Add '*.dsl' and '*.jsp' to syntax highlighter
  Src/editlib: ccrystaleditview.cpp

2006-01-22 Perry
 PATCH: [ 1411406 ] self-tests and new arguments and new diff2winmerge.exe
  Src: Changes.txt MainFrm.cpp MainFrm.h Merge.cpp Merge.h MergeArgs.cpp
  Src/Common: OptionsMgr.cpp OptionsMgr.h
  New directory diff2winmerge:
   Changes.txt ReadMe.txt Resource.h StdAfx.cpp StdAfx.h diff2winmerge.cpp
   diff2winmerge.dsp diff2winmerge.h diff2winmerge.rc
  New directory selftests:
   testdiff.pl
   subdir m: 
    t001a.txt t001b.txt t002a.txt t002b.txt t003a.txt t003b.txt
    t004a.txt t004b.txt
   subdir u: 
    t001a.txt t001b.txt t002a.txt t002b.txt t003a.txt t003b.txt
    t004a.txt t004b.txt
   subdir w:
    t001a.txt t001b.txt t002a.txt t002b.txt  t003a.txtt003b.txt
    t004a.txt t004b.txt
 Current selftests status: Failure count: 6 (of 108)
  Failing -b t002a (all 3 platforms)
  Failing -bi t002a (all 3 platforms)

2006-01-21 Kimmo
 PATCH: [ 1411150 ] Add GetActiveMergeView for MergeDoc
  Src: MergeDoc.cpp MergeDoc.h

2006-01-21 Perry
 PATCH: [ 1407740 ] Polish translation update (for version 2.4.4.0)
  Submitted by dr_prozac
  (Perry merging many of these to cvs trunk)
   Src/Language/Polish: MergePolish.rc

2006-01-20 Kimmo
 BUG: [ 1408587 ] Unused DoScroll() function in Merge*View
  Remove DoScroll() from CMergeEditView and CMergeDiffDetailView
  Src: MergeDiffDetailView.cpp MergeDiffDetailView.h MergeEditView.cpp
   MergeEditView.h

2006-01-17 Kimmo
 PATCH: [ 1406207 ] Fix error message for unique folders
  Src: DirView.cpp Merge.rc resource.h
  Src/Language: */Merge*.rc

2006-01-17 Perry
 PATCH: [ 1401711 ] A hybrid of word diff and char diff
 Submitted by Takashi Sawanaka
  Src: MergeDocLineDiffs.cpp PropEditor.cpp
   stringdiffs.cpp stringdiffs.h

2006-01-16 Kimmo
 PATCH: [ 1406203 ] Open unique files to external editor
  Src: DirView.cpp Merge.rc resource.h
  Src/Language: */Merge*.rc

2006-01-15 Perry